Ensure sufficient contrast ratio for Editor sidebar text

--- a/assets/scss/modules/admin/_sidebar.scss
+++ b/assets/scss/modules/admin/_sidebar.scss
@@ -17,7 +17,7 @@
   &--separator {
     padding: 0 $spacer;
     margin: $spacer*1.625 0 0;
-    opacity: 0.5;
+    opacity: 0.6;
     font-weight: $font-weight-bold;
     text-transform: uppercase;
     font-size: $small-font-size;
